# MoviesMicroservices

./: .env.example  .gitignore  README.md  docker-compose.yml
auth/: Dockerfile  alembic.ini  create_base_user.py  main.py  pyproject.toml
auth/alembic/versions/: 19a506c29c20_add_users_table.py  2024_12_11_1124-e78f50b8f6ee_add_role_and_role_permissions_table.py  2024_12_11_1125-15a38b3490c6_add_m2m_assiciation_between_roles_and_.py  2024_12_11_1500-b66384b50014_add_m2m_assiciation_between_users_and_.py  2024_12_12_1013-279f8161274e_change_table_name_role_mermissions_to_.py
auth/src/api/v1/: login.py  permissions.py  user.py
auth/src/core/: settings.py
auth/src/db/: redis.py
auth/src/models/: __init__.py  base.py  permissions.py  roles.py  user.py
auth/src/schemas/: permissions.py  user.py
auth/src/services/: validate_auth_user.py
auth/src/services/crud/: permissions.py  user.py
auth/src/utils/: auth_utils.py  check_permissions.py
chats/: pyproject.toml
comments/: Dockerfile  main.py  pyproject.toml
comments /: main.py
comments /src/core/: settings.py
comments /src/schemas/: comments.py
comments /src/utils/: logger.py
comments/alembic/: env.py
comments/alembic/versions/: 2024_12_13_1707-2e06169436fe_add_comments_table.py
comments/src/models/: __init__.py  movies.py
comments/src/schemas/: users.py
comments/src/utils/: auth_utils.py  raising_http_excp.py
init-db/: init-database.sh
movies/: Dockerfile  main.py  pyproject.toml
movies/alembic/versions/: 2024_12_13_0926-70ed293e8120_add_movies_table.py  (+1 more)
nginx/: nginx.conf
(+11 files in other folders)
